--- a/report-admin/src/main/resources/application.yml
+++ b/report-admin/src/main/resources/application.yml
@@ -70,13 +70,13 @@ spring:
   # redis 配置
   redis:
     # 地址
-    host: localhost
+    host: 124.70.131.104
     # 端口，默认为6379
     port: 6379
     # 数据库索引
     database: 0
     # 密码
-    password: 
+    password: 12345
     # 连接超时时间
     timeout: 10s
     lettuce:
@@ -98,21 +98,35 @@ token:
     secret: abcdefghijklmnopqrstuvwxyz
     # 令牌有效期（默认30分钟）
     expireTime: 30
-  
-# MyBatis配置
-mybatis:
-    # 搜索指定包别名
-    typeAliasesPackage: com.ruoyi.**.domain
-    # 配置mapper的扫描，找到所有的mapper.xml映射文件
-    mapperLocations: classpath*:mapper/**/*Mapper.xml
-    # 加载全局的配置文件
-    configLocation: classpath:mybatis/mybatis-config.xml
+
+mybatis-plus:
+  mapper-locations: classpath*:/mapper/**/*Mapper.xml
+  type-aliases-package: com.report.**.domain,com.report.**.dto
+  executor-type: simple
+  configuration:
+    map-underscore-to-camel-case: true
+    auto-mapping-behavior: full
+    auto-mapping-unknown-column-behavior: none
+    # 一级缓存
+    local-cache-scope: session
+    # 二级缓存
+    cache-enabled: false
+    log-impl: org.apache.ibatis.logging.slf4j.Slf4jImpl
+  global-config:
+    banner: false
+    db-config:
+      id-type: assign_id
+      # 默认值 不建议改
+      insert-strategy: not_null
+      update-strategy: not_null
 
 # PageHelper分页插件
-pagehelper: 
+pagehelper:
   helperDialect: mysql
+  reasonable: true
+  pageSizeZero: true
   supportMethodsArguments: true
-  params: count=countSql 
+  params: count=countSql
 
 # Swagger配置
 swagger:
