--- a/report-framework/pom.xml
+++ b/report-framework/pom.xml
@@ -59,6 +59,11 @@
             <artifactId>report-system</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.5.1</version>
+        </dependency>
     </dependencies>
 
 </project>
